# yew-study

./: Cargo.toml  README.md  index-17f990e44b668ddc.js  index-17f990e44b668ddc_bg.wasm  index-7eb95cc7b795a0c8.js  index-7eb95cc7b795a0c8_bg.wasm  index-dc580f684aeecef4.js  index-dc580f684aeecef4_bg.wasm  index.html
.devcontainer/.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
src/: README.md  main.rs  seonbi.rs
