[package]
name = "yew-study"
version = "0.1.0"
edition = "2021"
authors = ["Hyun Seungmin <boscohyun@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = "0.5.0"
stylist = "0.10.0"
tracing = "0.1.31"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
web-sys = "0.3.56"
yew = "0.19.0"
